--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ cloud.aws.credentials.secret-key=4lioqJHrTJ6BNQsm3X5takx7AsP+9XTqgrvlL1jP
 cloud.aws.region.static=eu-north-1
 cloud.aws.s3.bucket=myhotelphotos12
 
+twilio.account.sid=ACd7e1b390d72d77c34a6ed16fca6cb1a5
+twilio.auth.token=16155c445e34d7e946e9f27f5dca37c3
+twilio.phone.number=+14155238886
